src/test/workload/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami-info-ingress
  namespace: test-workload
spec:
  rules:
    - host: who-am-i.info
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami
              servicePort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami-org-ingress
  namespace: test-workload
spec:
  rules:
    - host: who-am-i.org
      http:
        paths:
          - path: /
            backend:
              serviceName: whoami
              servicePort: 80
